--- a/local-server/requirements.txt
+++ b/local-server/requirements.txt
@@ -1,8 +1,87 @@
-fastapi
-uvicorn
-pydantic
-sqlalchemy
-sentence-transformers
-python-dotenv
-sqlite-vec
-pytest
+annotated-types==0.7.0
+anyio==4.9.0
+arrow==1.3.0
+attrs==25.3.0
+backoff==2.2.1
+certifi==2025.7.9
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+faiss-cpu==1.11.0
+fastapi==0.116.0
+filelock==3.18.0
+fqdn==1.5.1
+fsspec==2025.5.1
+graphql-core==3.2.6
+h11==0.16.0
+harfile==0.3.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.2
+hypothesis==6.135.29
+hypothesis-graphql==0.11.1
+hypothesis-jsonschema==0.23.1
+idna==3.10
+iniconfig==2.1.0
+isoduration==20.11.0
+Jinja2==3.1.6
+joblib==1.5.1
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+junit-xml==1.9
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.5
+numpy==2.3.1
+packaging==25.0
+pillow==11.3.0
+pluggy==1.6.0
+psutil==7.0.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyrate-limiter==3.7.1
+pytest==8.4.1
+pytest-subtests==0.14.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+rfc3339-validator==0.1.4
+rfc3987==1.3.8
+rich==14.0.0
+rpds-py==0.26.0
+safetensors==0.5.3
+schemathesis==4.0.8
+scikit-learn==1.7.0
+scipy==1.16.0
+sentence-transformers==5.0.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.41
+sqlite-vec==0.1.6
+starlette==0.46.2
+starlette-testclient==0.4.1
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+tomli==2.2.1
+torch==2.7.1
+tqdm==4.67.1
+transformers==4.53.1
+types-python-dateutil==2.9.0.20250708
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uri-template==1.3.0
+urllib3==2.5.0
+uvicorn==0.35.0
+webcolors==24.11.1
+Werkzeug==3.1.3
