--- a/ux/package.json
+++ b/ux/package.json
@@ -8,7 +8,17 @@
     "android": "DARK_MODE=media expo start --android",
     "ios": "DARK_MODE=media expo start --ios",
     "web": "DARK_MODE=media expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "generate-types": "openapi-typescript documentation/openapi.json --output api/client/types.ts",
+    "test": "jest --config jest.api.config.js",
+    "test:watch": "jest --config jest.api.config.js --watch",
+    "test:coverage": "jest --config jest.api.config.js --coverage",
+    "test:api": "jest --config jest.api.config.js __tests__/api",
+    "test:api:watch": "jest --config jest.api.config.js --watch __tests__/api",
+    "test:integration": "jest --config jest.config.json __tests__/integration",
+    "test:integration:watch": "jest --config jest.config.json --watch __tests__/integration",
+    "test:components": "jest --config jest.config.json",
+    "test:components:watch": "jest --config jest.config.json --watch"
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
@@ -46,6 +56,8 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
@@ -77,10 +89,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "jest-expo": "^53.0.9",
     "jscodeshift": "^0.15.2",
+    "msw": "^2.10.4",
+    "openapi-typescript": "^7.8.0",
     "typescript": "~5.8.3"
   },
   "private": true
