--- a/ux/package.json
+++ b/ux/package.json
@@ -26,6 +26,8 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "@standard-schema/spec": "^1.0.0",
+    "@tanstack/react-form": "^1.14.2",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-router-devtools": "^1.116.0",
@@ -34,6 +36,7 @@
     "flowbite-react": "^0.11.7",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^19.1.0"
   }
 }
