--- a/ux/package.json
+++ b/ux/package.json
@@ -11,18 +11,22 @@
     "start": "vite",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
-    "postinstall": "flowbite-react patch"
+    "postinstall": "flowbite-react patch",
+    "generate-types": "openapi-typescript documentation/openapi.json -o src/api/client/types.ts"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/router-plugin": "^1.116.1",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint-plugin-tailwindcss": "^3.18.2",
+    "openapi-typescript": "^7.8.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
     "vite": "^6.2.6"
   },
   "dependencies": {
